fix: projects techs wrap

--- a/src/App.css
+++ b/src/App.css
@@ -83,7 +83,7 @@ a {
   line-height:1.7;
 }
 
-/* ASIDE */
+/* LINKS BAR */
 
 .linksBar {
   position: fixed;
@@ -104,7 +104,7 @@ a {
   display:block;
 }
 
-/* ICONS ASIDE */
+/* ICONS LINKS BAR */
 
 .linksBar .icons {
   font-size: 2em;
@@ -124,7 +124,7 @@ a {
   display: flex;
   flex-direction: row;
   align-items: right;
- 
+
   padding: 2em 10em 2em 6em;
 }
 
@@ -233,6 +233,7 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .project .projTechs span {
